Use the ST3 plugin for git

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
         <h3>CodeTheInternet on github</h3>
         <p>Testing changes</p>
+        <p>Add another change. Try to use the SublimeText plugin for add/commit/push</p>
       </section>
 
     </div>
