--- a/index.html
+++ b/index.html
@@ -28,16 +28,18 @@
 
       <section>
         <div id="title">
-          <h1>Codetheinternet.github.io</h1>
-          <p></p>
+          <h1>CodeTheInternet</h1>
+          <p>"I don't mean to brag, but I am quite good at coding the internet."</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/CodeTheInternet">CodeTheInternet</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>CodeTheInternet on github</h3>
-        <p>Testing changes</p>
-        <p>Add another change. Try to use the SublimeText plugin for add/commit/push</p>
+        <p>I am a senior front-end web developer located on the central coast of California.</p>
+        <p>I have worked with many of the leading web professionals and agencies in my home town of Chicago such as LipmanHearne, AlphaZeta, IA Collaborative and DesignKitchen; as well as for some high-profile Chicago-based companies like TransUnion, Motorola, Crate &amp; Barrel, Aon, and Grainger.</p>
+        <p>Some of my work has been with content management systems (CMS) such as Drupal, Joomla, WordPress, Amazon StoreFront, Sitefinity, Interwoven and many more. My front-end work is typically HTML/CSS/JS while utilizing templates and frameworks like AngularJS and Handlebars.</p>
+        <p>I have a background in the back-end development realm, having written applications using PHP, Perl and MySQL. I have experience working with numerous projects in three of the four major web development environments (PHP, .NET, Java), and I hope to expand my knowledge into a Ruby on Rails environment.</p>
+        <p>My work runs the gammut of what it takes to make a business succeed online, from PCI compliance, search engine optimization (SEO) and user experience (UX) to social networking, email campaigns and lead generation. Completing projects well within project timelines, while at the same time writing clean, efficient, standards-compliant code is my forte.</p>
+        <hr/>
+        <p><em>Using github.io as a testing ground for learning git</em></p>
       </section>
 
     </div>
