Added gittip because, why not?

--- a/index.html
+++ b/index.html
@@ -1,49 +1,45 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Codetheinternet.github.io by CodeTheInternet</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
+ <head>
+  <meta charset="utf-8" />
+  <meta content="chrome=1" http-equiv="X-UA-Compatible" />
+  <title>Codetheinternet.github.io by CodeTheInternet</title>
+  <link href="stylesheets/styles.css" rel="stylesheet" />
+  <link href="stylesheets/pygment_trac.css" rel="stylesheet" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script><script src="javascripts/respond.js"></script><!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
+    <![endif]--><!--[if lt IE 8]>
     <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/CodeTheInternet">View On GitHub</a></li>
-        </nav>
-      </div><!-- end header -->
-
-    <div class="wrapper">
-
-      <section>
-        <div id="title">
-          <h1>CodeTheInternet</h1>
-          <p>"I don't mean to brag, but I am quite good at coding the internet."</p>
-          <hr>
-        </div>
-
-        <p>I am a senior front-end web developer located on the central coast of California.</p>
-        <p>I have worked with many of the leading web professionals and agencies in my home town of Chicago such as LipmanHearne, AlphaZeta, IA Collaborative and DesignKitchen; as well as for some high-profile Chicago-based companies like TransUnion, Motorola, Crate &amp; Barrel, Aon, and Grainger.</p>
-        <p>Some of my work has been with content management systems (CMS) such as Drupal, Joomla, WordPress, Amazon StoreFront, Sitefinity, Interwoven and many more. My front-end work is typically HTML/CSS/JS while utilizing templates and frameworks like AngularJS and Handlebars.</p>
-        <p>I have a background in the back-end development realm, having written applications using PHP, Perl and MySQL. I have experience working with numerous projects in three of the four major web development environments (PHP, .NET, Java), and I hope to expand my knowledge into a Ruby on Rails environment.</p>
-        <p>My work runs the gammut of what it takes to make a business succeed online, from PCI compliance, search engine optimization (SEO) and user experience (UX) to social networking, email campaigns and lead generation. Completing projects well within project timelines, while at the same time writing clean, efficient, standards-compliant code is my forte.</p>
-        <hr/>
-        <p><em>Using github.io as a testing ground for learning git</em></p>
-      </section>
-
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+    <![endif]-->  <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport" />
+ </head>
+ <body>
+  <div id="header">
+   <nav>
+   <li class="fork"><a href="https://github.com/CodeTheInternet">View On GitHub</a></li>
+   </nav></div>
+<!-- end header -->  <div class="wrapper">
+   <section>
+   <div id="title">
+    <h1>
+     CodeTheInternet</h1>
+    <p>
+     &quot;I don&#39;t mean to brag, but I am quite good at coding the internet.&quot;</p>
+    <hr />
+   </div>
+   <p>
+    I am a senior front-end web developer located on the central coast of California.</p>
+   <p>
+    I have worked with many of the leading web professionals and agencies in my home town of Chicago such as LipmanHearne, AlphaZeta, IA Collaborative and DesignKitchen; as well as for some high-profile Chicago-based companies like TransUnion, Motorola, Crate &amp; Barrel, Aon, and Grainger.</p>
+   <p>
+    Some of my work has been with content management systems (CMS) such as Drupal, Joomla, WordPress, Amazon StoreFront, Sitefinity, Interwoven and many more. My front-end work is typically HTML/CSS/JS while utilizing templates and frameworks like AngularJS and Handlebars.</p>
+   <p>
+    I have a background in the back-end development realm, having written applications using PHP, Perl and MySQL. I have experience working with numerous projects in three of the four major web development environments (PHP, .NET, Java), and I hope to expand my knowledge into a Ruby on Rails environment.</p>
+   <p>
+    My work runs the gammut of what it takes to make a business succeed online, from PCI compliance, search engine optimization (SEO) and user experience (UX) to social networking, email campaigns and lead generation. Completing projects well within project timelines, while at the same time writing clean, efficient, standards-compliant code is my forte.</p>
+   <hr />
+   <p>
+    <em>Using github.io as a testing ground for learning git</em></p>
+    <script data-gittip-username="CodeTheInternet" src="//gttp.co/v1.js"></script>
+   </section></div>
+<!--[if !IE]><script>fixScale(document);</script><![endif]--> </body>
 </html>
