--- a/index.htm
+++ b/index.htm
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Destiny Crucible Metrics</title>
-	<script src="jquery.js"/>
-	<script src="ajax.js"/>
+	<script src="jquery.js"></script>
+	<script src="ajax.js"></script>
 </head>
 <body>
 	<section>
