--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,9 @@
 <body>
 	<section>
 		<h1>Destiny Crucible Metrics Sandbox</h1>
+		<article>
+		Responses will display here
+		</article>
 	</section>
 </body>
 </html>
