--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
 	<thead><tr><th>Activity Period</th><th>Activity Mode</th></tr></thead>
 	<tbody>
 	{{#each activities}}
-	<tr><td>{{period}}</td>{{#activityModes activityDetails.mode}}</tr>
+	<tr><td>{{period}}</td>{{activityModes activityDetails.mode}}</tr>
 	{{/each}}
 	</table>
 	</script>
