--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
 	<tr>
 		<td>{{period}}</td>
 		<td>{{activityModes activityDetails.mode}}</td>
-		<td>{{values.killsDeathsRatio.displayValue}}</td>
+		<td>{{values.killsDeathsRatio.basic.displayValue}}</td>
 	</tr>
 	{{/each}}
 	</table>
