--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 	<script src="jquery.js"></script>
 	<script src="handlebars.js"></script>
 	<script src="ajax.js"></script>
-	<style type="text/css" rel="stylesheet" href="style.css"/>
+	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 	<section>
