--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
 	<tbody>
 	{{#each activities}}
 	<tr>
-		<td>{{period}}</td>
+		<td>{{formatDate period}}</td>
 		<td>{{activityModes activityDetails.mode}}</td>
 		<td>{{values.killsDeathsRatio.basic.displayValue}}</td>
 	</tr>
