Start over with just a redirect to LinkedIn for now.

--- a/index.htm
+++ b/index.htm
@@ -1,37 +1,10 @@
 <!doctype html>
 <html>
 <head>
-	<title>Destiny Crucible Metrics</title>
-	<script src="jquery.js"></script>
-	<script src="handlebars.js"></script>
-	<script src="ajax.js"></script>
-	<link rel="stylesheet" href="style.css"/>
+	<title>CodeTheInternet</title>
+	<meta http-equiv="refresh" content="0;https://www.linkedin.com/in/codetheinternet/" />
 </head>
 <body>
-	<section>
-		<h1>Destiny Crucible Metrics Sandbox</h1>
-		<div id="status" class="loading">Loading ...</div>
-		<div id="response">
-			Response data will display here.
-		</div>
-	</section>
-
-	<script type="text/x-handlebars-template" id="tmpl_Crucible">
-	<table>
-	<thead><tr>
-		<th>Activity Period</th>
-		<th>Activity Mode</th>
-		<th>KDR</th>
-	</tr></thead>
-	<tbody>
-	{{#each activities}}
-	<tr>
-		<td>{{formatDate period}}</td>
-		<td>{{activityModes activityDetails.mode}}</td>
-		<td>{{values.killsDeathsRatio.basic.displayValue}}</td>
-	</tr>
-	{{/each}}
-	</table>
-	</script>
+	<!-- https://www.linkedin.com/in/codetheinternet/ -->
 </body>
 </html>
